# cafe-media

./: .build.yml  .travis.yml  AUTHORS  COPYING-DOCS  Makefile.am  NEWS  README  autogen.sh  cafe-media.pot  configure.ac  index.html  makepot
.tx/: config
2023-06-28-161544-6707-cppcheck@54da68a2bac8_master/: output_54da68a2bac8c04d8fde289272c24804922b77c6
2023-06-30-105314-7532-cppcheck@c4b599ac581c_devel/: 4.html  7.html  output_c4b599ac581c441eb061a28f0060e04b0ec30612
2023-06-30-125337-9135-cppcheck@97720cfe683b_devel/: commitmsg  output_97720cfe683bd2783af5e5a72fbca55cee584cf7
2023-06-30-222810-5124-cppcheck@76cbdd209fc3_devel/: 5.html  9.html  output_76cbdd209fc3ea2a415e10095816e6c074463428
2023-06-30-223606-7259-cppcheck@720e52a0c175_devel/: commitmsg  output_720e52a0c17557ef2e451f21e96fec04458ad8dc  stats.html
2023-06-30-224000-9706-cppcheck@774e273a316f_devel/: 0.html  output_774e273a316f096abd711ebdb1d758c81fda1083
2023-06-30-225621-2331-cppcheck@774e273a316f_master/: 1.html  commitmsg  index.html  output_774e273a316f096abd711ebdb1d758c81fda1083
2023-07-01-105602-2753-cppcheck@fe47036babb0_devel/: 10.html  2.html  6.html  output_fe47036babb0b45ff78d01bcab7450c6e98976b9
2023-07-01-110054-3070-cppcheck@e464ebd533f4_devel/: 3.html  8.html  commitmsg  output_e464ebd533f4801ccfb35311141ce59756e48da3
2023-07-02-105858-5290-cppcheck@e464ebd533f4_master/: 18.html  2.html  25.html  28.html  4.html  index.html  output_e464ebd533f4801ccfb35311141ce59756e48da3  stats.html
2023-07-02-233226-0049-cppcheck@7c45f4e2e233_devel/: 11.html  13.html  20.html  22.html  23.html  3.html  6.html  7.html  8.html  9.html  output_7c45f4e2e233709997cbd41b88b40897dc7ba166
2023-07-02-234608-6135-cppcheck@7c45f4e2e233_master/: 0.html  1.html  10.html  12.html  14.html  15.html  16.html  17.html  19.html  2.html  21.html  24.html  26.html  27.html  28.html  5.html  commitmsg  output_7c45f4e2e233709997cbd41b88b40897dc7ba166
2023-07-09-183627-5661-cppcheck@6f9620122b3f_devel/: 14.html  21.html  output_6f9620122b3f2dea18f5619911cbcd9e1ecb878d
2023-07-09-183734-2696-cppcheck@effe5af55d76_devel/: 0.html  23.html  27.html  28.html  7.html  output_effe5af55d76e60185b90361b8281792d81a99e9
2023-07-09-183930-2999-cppcheck@8a09d194475e_devel/: 13.html  17.html  4.html  9.html  output_8a09d194475e6f4fa48a35402049fb269f6ba932
2023-07-09-184214-0612-cppcheck@9032c2f68444_devel/: output_9032c2f684441724a0889c7e44bc4f200b6a6886  stats.html
2023-07-09-184318-7083-cppcheck@0c159294942a_devel/: 2.html  20.html  25.html  26.html  3.html  index.html  output_0c159294942a2e4434b538f967980ecc38893c7e
2023-07-09-185408-2212-cppcheck@92f8bd535cf6_devel/: 1.html  commitmsg  output_92f8bd535cf67fc42ae31245e6592378e4e5f946
2023-07-10-151604-2773-cppcheck@86122a59ac5b_devel/: 6.html  8.html  output_86122a59ac5b2c182d2e291f9d4e2e5e66928569
2023-07-10-153041-2266-cppcheck@86122a59ac5b_master/: 10.html  11.html  12.html  15.html  16.html  18.html  19.html  22.html  24.html  5.html  output_86122a59ac5b2c182d2e291f9d4e2e5e66928569
2024-01-21-115746-2438-cppcheck@86122a59ac5b_cimaster/: 9.html  output_86122a59ac5b2c182d2e291f9d4e2e5e66928569
2024-02-07-165854-3996-cppcheck@31afbabe8bab_devel/: 0.html  1.html  3.html  7.html  index.html  output_31afbabe8bab1a056218d15c63eb982ef3f6fac7
2024-02-07-170958-6253-cppcheck@31afbabe8bab_master/: 6.html  8.html  output_31afbabe8bab1a056218d15c63eb982ef3f6fac7  stats.html
2024-02-07-181022-5953-cppcheck@31afbabe8bab_devel/: 10.html  2.html  4.html  5.html  output_31afbabe8bab1a056218d15c63eb982ef3f6fac7
2024-02-11-193128-5762-cppcheck@b4caeefbbf7d_devel/: 0.html  1.html  2.html  3.html  5.html  6.html  output_b4caeefbbf7d48ee1b8024aff098fdbf48bd8810
2024-02-11-204024-0557-cppcheck@b4caeefbbf7d_master/: 10.html  4.html  7.html  8.html  9.html  output_b4caeefbbf7d48ee1b8024aff098fdbf48bd8810
2024-07-14-150111-9997-cppcheck@e0dc1e683cee_devel/: 10.html  11.html  2.html  7.html  output_e0dc1e683ceeab69b7e10a40777b213c5a92a4fd
2024-07-14-151155-3329-cppcheck@e0dc1e683cee_master/: 5.html  6.html  8.html  9.html  commitmsg  output_e0dc1e683ceeab69b7e10a40777b213c5a92a4fd
2024-07-14-155107-2898-cppcheck@e0dc1e683cee_master/: 3.html  output_e0dc1e683ceeab69b7e10a40777b213c5a92a4fd
2024-08-06-115037-3273-cppcheck@308cf19177a1_master/: 0.html  1.html  4.html  index.html  output_308cf19177a18b247854e37df22a4e2c50fcc9b1  stats.html
build-aux/: git-version-gen
cafe-volume-control/: Makefile.am  applet-main.c  dialog-main.c  gvc-applet.c  gvc-applet.h  gvc-balance-bar.c  gvc-balance-bar.h  gvc-channel-bar.c  gvc-channel-bar.h  gvc-combo-box.c  gvc-combo-box.h  gvc-level-bar.c  gvc-level-bar.h  gvc-mixer-dialog.c  gvc-mixer-dialog.h  gvc-sound-theme-chooser.c  gvc-sound-theme-chooser.h  gvc-speaker-test.c  gvc-speaker-test.h  gvc-status-icon.c  gvc-status-icon.h  gvc-stream-applet-icon.c  gvc-stream-applet-icon.h  gvc-stream-status-icon.c  gvc-stream-status-icon.h  gvc-utils.c  gvc-utils.h  org.cafe.panel.applet.GvcAppletFactory.service.in  sound-theme-file-utils.c  status-icon-main.c
data/: Makefile.am  cafe-volume-control-status-icon.desktop.in  cafe-volume-control.desktop.in.in
data/icons/: Makefile.am
data/sounds/: Makefile.am  cafe-sounds-default.xml.in.in
man/: Makefile.am  cafe-volume-control-applet.1  cafe-volume-control.1
mate-volume-control/: applet-main.c
po/: ChangeLog  Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  (+101 more)
(+1 files in other folders)
